1998-03-18  Alex Lancaster  <alex@santafe.edu>

	* ObserverSwarm.m: Minor reformatting.

	* ModelSwarm.m: Import activity.h and simtools.h.

	* ModelSwarm.h: Removed irrelevant <collections.h>, <activity.h>
	and <objectbase.h> imports.
	
	* FoodSpace.h: Removed irrelevant import of <simtools.h>. Minor
	reformatting.

1998-02-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* main.m: Include simtoolsgui/GUISwarm.h.

	* ObserverSwarm.m: Don't include collections.h, objectbase.h,
	analysis.h, or gui.h.  Include simtoolsgui.h

	* ObserverSwarm.h: Don't include objectbase.h, space.h,
	activity.h, gui.h, collections.h, simtools.h, and analysis.h.
	Include simtoolsgui/GUISwarm.h.

	* Bug.m, FoodSpace.m, ModelSwarm.m: Include random.h instead of
	simtools.h.  Reformatting throughout.

1998-02-26  Alex Lancaster  <alex@santafe.edu>

	* README: Removed reference to modelZone, added further
	explanations.
	
	* ObserverSwarm.m ([ObserverSwarm -build{Objects,Actions}]): Made
	all references to object creation in create: and createBegin:
	calls be to "self" rather than the redundant [self getZone].
	Swarms are now responsible for managing their own Zones.

	* ModelSwarm.m: Likewise.

1998-02-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ModelSwarm.h, Bug.h: Include from objectbase/ instead of
	swarmobject/.

1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* main.m (main): Constify argv.

	* ObserverSwarm.m ([ObserverSwarm -buildObjects]): Use
	setDisplayWidget:colormap: instead of setDisplayWidget:Colormap:.
	Use Colormap instead of XColormap for colorMap.

1998-01-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ObserverSwarm.m ([ObserverSwarm +createBegin:]): Include 
	gui.h.  Reformatting throughout.

	* ObserverSwarm.h: Include gui.h instead of tkobjc.h.
	(ObserverSwarm):  Make colormap conform to the Colormap protocol
	instead of being statically typed.  Make worldRaster conform
	to the ZoomRaster protocol instead of being statically typed.